add manage instance
