# docs/swagger.json
@@ -9,6 +9,29 @@
     "host": "47.236.178.74:3000",
     "basePath": "/api",
     "paths": {
+        "/manage-instance": {
+            "get": {
+                "description": "Manage Instance",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Manage Instance"
+                ],
+                "summary": "Manage Instance",
+                "responses": {
+                    "200": {
+                        "description": "ManageInstanceResponse",
+                        "schema": {
+                            "$ref": "#/definitions/handler.manageInstanceResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/proxy-check": {
             "post": {
                 "description": "Proxy Check",
@@ -535,8 +558,22 @@
         "handler.getStatusResponse": {
             "type": "object",
             "properties": {
+                "proxy": {
+                    "type": "string"
+                },
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "handler.manageInstanceResponse": {
+            "type": "object",
+            "properties": {
+                "instances": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.whatsAppInstanceInfo"
+                    }
                 }
             }
         },
@@ -646,6 +683,21 @@
             "properties": {
                 "message": {
                     "$ref": "#/definitions/response.Message"
+                }
+            }
+        },
+        "handler.whatsAppInstanceInfo": {
+            "type": "object",
+            "properties": {
+                "connected": {
+                    "type": "boolean"
+                },
+                "instance_id": {
+                    "type": "string"
+                },
+                "proxy": {
+                    "description": "Client     *whatsapp.Instance `json:\"client\"`",
+                    "type": "string"
                 }
             }
         },
